alignment fix

--- a/src/containers/EventDetailsContainer/EventDetailsContainer.scss
+++ b/src/containers/EventDetailsContainer/EventDetailsContainer.scss
@@ -25,6 +25,9 @@
   @media screen and (width: 375px) and (height: 667px) {
     margin-top: 63vh;
   }
+  @media screen and (min-width: 1367px) and (max-width: 1440px) {
+    margin-top: 300px;
+  }
 }
 
 .location-container {
@@ -66,7 +69,7 @@
     margin-top: 400px;
   }
 
-  @media only screen and (min-height: 600px) and (max-height: 920px) and (min-width: 1000px) {
+  @media only screen and (min-height: 600px) and (max-height: 920px) and (min-width: 1000px) and (max-width: 1366px) {
     margin-top: 310px;
   }
 
